test/error/StSwitchCaseType.fu
public static class Test
{
	public static bool Run()
	{
		int x = 42;
		switch (x) {
		case 1.5: //ERROR: Cannot convert 'double' to 'int'
			return false;
		default:
			return false;
		}
	}
}
